--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,3 +1,4 @@
+Options -Indexes
 php_flag  display_errors                  on
 php_flag  display_startup_errors          on
 DirectoryIndex index.php
