--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "leeoniya/dump-r": "^2.1",
         "mustache/mustache": "^2.12",
-        "doctrine/orm": "^2.6"
+        "doctrine/orm": "^2.6",
+        "predis/predis": "^1.1"
     }
 }
