add Tracy debugger

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
         "mustache/mustache": "^2.12",
         "doctrine/orm": "^2.6",
         "predis/predis": "^1.1",
-        "dg/adminer-custom": "^1.15"
+        "dg/adminer-custom": "^1.15",
+        "tracy/tracy": "^2.5"
     }
 }
