--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,12 @@
         "predis/predis": "^1.1",
         "dg/adminer-custom": "^1.15",
         "tracy/tracy": "^2.5"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\Models\\": "models/",
+            "App\\Entities\\": "entities/",
+            "App\\Resource\\": "res/"
+        }
     }
 }
